--- a/.github/workflows/push-to-docker-hub.yaml
+++ b/.github/workflows/push-to-docker-hub.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/login-action@v2.0.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
