--- a/.github/workflows/push-to-docker-hub.yaml
+++ b/.github/workflows/push-to-docker-hub.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.0.0
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
