--- a/.github/workflows/push-to-docker-hub.yaml
+++ b/.github/workflows/push-to-docker-hub.yaml
@@ -14,7 +14,10 @@ on:
   pull_request:
     branches:
       - 'master'
-
+  workflow_dispatch:
+  release:
+    types: [published]
+   
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
